--- a/api/global/sidebar/components.json
+++ b/api/global/sidebar/components.json
@@ -24,6 +24,12 @@
       "label": "导航",
       "children": [
         {
+          "value": "dropdown",
+          "label": ["Dropdown", "下拉列表"],
+          "link": "/components/dropdown"
+        },
+
+        {
           "value": "pagination",
           "label": ["Pagination", "分页"],
           "link": "/components/pagination"
